# xtip

./: .gitignore  .travis.yml  Makefile  README.md  mypy.ini  pyproject.toml  x-tip.py
tests/: test_dummy.py
xtip/: __init__.py  __main__.py  commands.py  exceptions.py  ui.py  ui_gtk.py  xtip.py
